# ffmpeg-study

./: .gitignore  .gitmodules  CMakeLists.txt  build_ffmpeg_win.sh  prepare.py
Helloworld/: CMakeLists.txt  main.cpp
ffplay/: CMakeLists.txt
simplest_player/: CMakeLists.txt  main.cpp
